@@ -2,7 +2,6 @@ package com.liang.drugagent.executor.tenderreview;
 
 import com.liang.drugagent.domain.tenderreview.CompareScope;
 import com.liang.drugagent.domain.tenderreview.Field;
-import com.liang.drugagent.domain.tenderreview.RuleEvidence;
 import com.liang.drugagent.domain.tenderreview.RuleHit;
 import com.liang.drugagent.domain.tenderreview.RuleResult;
 import com.liang.drugagent.domain.tenderreview.TenderReviewData;
@@ -12,7 +11,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.UUID;
 import java.util.stream.Collectors;
 
 /**
@@ -26,7 +24,7 @@ import java.util.stream.Collectors;
  * @author liangjiajian
  */
 @Component
-public class CoreTeamOverlapExecutor implements TenderRuleExecutor {
+public class CoreTeamOverlapExecutor extends AbstractTenderExecutor {
 
     /** 团队成员字段类型。 */
     private static final String TEAM_MEMBER_FIELD_TYPE = "team_member";
@@ -44,12 +42,6 @@ public class CoreTeamOverlapExecutor implements TenderRuleExecutor {
     /** 判定简历实质重合的相似度阈值系数。 */
     private static final double SIMILARITY_THRESHOLD = 0.95;
 
-    /**
-     * 执行核心团队重叠识别。
-     *
-     * @param data 标书审查结构化输入数据
-     * @return 命中人员信息命中的结果集
-     */
     @Override
     public RuleResult execute(TenderReviewData data) {
         RuleResult result = new RuleResult();
@@ -65,15 +57,11 @@ public class CoreTeamOverlapExecutor implements TenderRuleExecutor {
         return result;
     }
 
-    /**
-     * 在指定比对范围内检测重合的团队成员。
-     */
     private List<RuleHit> detectInScope(CompareScope scope, List<Field> fields) {
         if (scope == null || scope.getDocumentIds() == null || scope.getDocumentIds().size() < 2) {
             return List.of();
         }
 
-        // 按文档归集人员相关字段
         Map<String, List<Field>> teamFieldsByDoc = fields.stream()
                 .filter(Objects::nonNull)
                 .filter(field -> TEAM_MEMBER_FIELD_TYPE.equals(field.getFieldType()))
@@ -83,18 +71,23 @@ public class CoreTeamOverlapExecutor implements TenderRuleExecutor {
         List<RuleHit> hits = new ArrayList<>();
         List<String> documentIds = scope.getDocumentIds();
 
-        // 两两比对不同厂商文档中出现的人员
         for (int i = 0; i < documentIds.size(); i++) {
+            String leftDocId = documentIds.get(i);
+            List<Field> leftFields = teamFieldsByDoc.getOrDefault(leftDocId, List.of());
+            if (leftFields.isEmpty())
+                continue;
+
             for (int j = i + 1; j < documentIds.size(); j++) {
-                String leftDocId = documentIds.get(i);
                 String rightDocId = documentIds.get(j);
-                List<Field> leftFields = teamFieldsByDoc.getOrDefault(leftDocId, List.of());
                 List<Field> rightFields = teamFieldsByDoc.getOrDefault(rightDocId, List.of());
+                if (rightFields.isEmpty())
+                    continue;
 
                 for (Field left : leftFields) {
                     for (Field right : rightFields) {
-                        if (isSameMember(left, right)) {
-                            hits.add(buildHit(scope, left, right));
+                        double similarity = getSimilarity(left, right);
+                        if (similarity >= SIMILARITY_THRESHOLD) {
+                            hits.add(buildHit(scope, left, right, similarity));
                         }
                     }
                 }
@@ -103,45 +96,26 @@ public class CoreTeamOverlapExecutor implements TenderRuleExecutor {
         return hits;
     }
 
-    /**
-     * 判断是否为同一人且简历基本一致。
-     */
-    private boolean isSameMember(Field f1, Field f2) {
-        // normalizedKey 存放姓名，normalizedValue 存放详细简历描述
+    private double getSimilarity(Field f1, Field f2) {
         String name1 = f1.getNormalizedKey();
         String name2 = f2.getNormalizedKey();
-
         if (name1 == null || name2 == null || !name1.trim().equals(name2.trim())) {
-            return false;
-        }
-
-        // 姓名匹配成功后，执行简历内容相似度精细比对
-        String resume1 = f1.getNormalizedValue();
-        String resume2 = f2.getNormalizedValue();
-
-        return calculateSimilarity(resume1, resume2) >= SIMILARITY_THRESHOLD;
-    }
-
-    /**
-     * 计算两个简历文本字符串的相似度。
-     */
-    private double calculateSimilarity(String s1, String s2) {
-        if (s1 == null || s2 == null) {
             return 0.0;
         }
-        if (s1.equals(s2)) {
+
+        String resume1 = f1.getNormalizedValue();
+        String resume2 = f2.getNormalizedValue();
+        if (resume1 == null || resume2 == null)
+            return 0.0;
+        if (resume1.equals(resume2))
             return 1.0;
-        }
-        int longerLength = Math.max(s1.length(), s2.length());
-        if (longerLength == 0) {
+
+        int longerLength = Math.max(resume1.length(), resume2.length());
+        if (longerLength == 0)
             return 1.0;
-        }
-        return (longerLength - editDistance(s1, s2)) / (double) longerLength;
+        return (longerLength - editDistance(resume1, resume2)) / (double) longerLength;
     }
 
-    /**
-     * Levenshtein 编辑距离算法。
-     */
     private int editDistance(String s1, String s2) {
         int[] costs = new int[s2.length() + 1];
         for (int i = 0; i <= s1.length(); i++) {
@@ -160,52 +134,26 @@ public class CoreTeamOverlapExecutor implements TenderRuleExecutor {
                     }
                 }
             }
-            if (i > 0) {
+            if (i > 0)
                 costs[s2.length()] = lastValue;
-            }
         }
         return costs[s2.length()];
     }
 
-    /**
-     * 构建团队重叠项风险命中详情。
-     */
-    private RuleHit buildHit(CompareScope scope, Field left, Field right) {
-        RuleHit hit = new RuleHit();
-        hit.setHitId(UUID.randomUUID().toString());
-        hit.setRuleCode(RULE_CODE);
-        hit.setRuleName(RULE_NAME);
-        hit.setScopeId(scope.getScopeId());
-        hit.setRiskType(RISK_TYPE);
-        hit.setPriority(PRIORITY);
+    private RuleHit buildHit(CompareScope scope, Field left, Field right, double sim) {
+        RuleHit hit = createBaseHit(RULE_CODE, RULE_NAME, scope.getScopeId(), RISK_TYPE, PRIORITY, VERSION);
         hit.setWeight(95);
-
-        double sim = calculateSimilarity(left.getNormalizedValue(), right.getNormalizedValue());
         hit.setMatchedValue("member_name:" + left.getNormalizedKey());
 
-        hit.setTriggerSummary(String.format("文档 %s 与 %s 的核心团队成员“%s”完全重叠。两份简历描述的高度匹配（相似度 %.0f%%），存在串通投标风风险。",
+        hit.setTriggerSummary(String.format("文档 %s 与 %s 的核心团队成员“%s”完全重叠。两份简历描述的高度匹配（相似度 %.0f%%），存在串通投标风险。",
                 left.getDocumentId(), right.getDocumentId(), left.getNormalizedKey(), sim * 100));
 
         hit.setDocumentIds(List.of(left.getDocumentId(), right.getDocumentId()));
         hit.setFieldIds(List.of(left.getFieldId(), right.getFieldId()));
         hit.setBlockIds(List.of(left.getBlockId(), right.getBlockId()).stream()
-                .filter(Objects::nonNull).distinct().toList());
-        hit.setEvidences(List.of(toEvidence(left), toEvidence(right)));
-        hit.setVersion(VERSION);
-        return hit;
-    }
+                .filter(Objects::nonNull).distinct().collect(Collectors.toList()));
 
-    /**
-     * 转换证据对象。
-     */
-    private RuleEvidence toEvidence(Field field) {
-        RuleEvidence evidence = new RuleEvidence();
-        evidence.setDocumentId(field.getDocumentId());
-        evidence.setFieldId(field.getFieldId());
-        evidence.setBlockId(field.getBlockId());
-        evidence.setMatchedValue(field.getNormalizedValue());
-        evidence.setChapterPath(field.getChapterPath());
-        evidence.setAnchor(field.getAnchor());
-        return evidence;
+        hit.setEvidences(List.of(toEvidence(left), toEvidence(right)));
+        return hit;
     }
 }
