@@ -2,7 +2,6 @@ package com.liang.drugagent.executor.tenderreview;
 
 import com.liang.drugagent.domain.tenderreview.CompareScope;
 import com.liang.drugagent.domain.tenderreview.Field;
-import com.liang.drugagent.domain.tenderreview.RuleEvidence;
 import com.liang.drugagent.domain.tenderreview.RuleHit;
 import com.liang.drugagent.domain.tenderreview.RuleResult;
 import com.liang.drugagent.domain.tenderreview.TenderReviewData;
@@ -12,7 +11,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.UUID;
 import java.util.stream.Collectors;
 
 /**
@@ -26,7 +24,7 @@ import java.util.stream.Collectors;
  * @author liangjiajian
  */
 @Component
-public class ErrorReplicationExecutor implements TenderRuleExecutor {
+public class ErrorReplicationExecutor extends AbstractTenderExecutor {
 
     /** 规则编码。 */
     private static final String RULE_CODE = "W-P5";
@@ -39,18 +37,9 @@ public class ErrorReplicationExecutor implements TenderRuleExecutor {
     /** 规则版本。 */
     private static final String VERSION = "v1";
 
-    /**
-     * 预定义的低频/罕见错别字库。
-     * 实际应用中可扩展为动态配置或外部字典。
-     */
+    /** 预定义的低频/罕见错别字库。 */
     private static final List<String> RARE_ERRORS = List.of("应急响映", "方案设记", "技术架勾");
 
-    /**
-     * 执行错误复现识别。
-     *
-     * @param data 标书审查结构化输入数据
-     * @return 包含命中罕见错误的结果集
-     */
     @Override
     public RuleResult execute(TenderReviewData data) {
         RuleResult result = new RuleResult();
@@ -66,30 +55,21 @@ public class ErrorReplicationExecutor implements TenderRuleExecutor {
         return result;
     }
 
-    /**
-     * 在比对范围内针对每个预定义的罕见错误进行扫描。
-     */
     private List<RuleHit> detectInScope(CompareScope scope, List<Field> fields) {
         if (scope == null || scope.getDocumentIds() == null || scope.getDocumentIds().size() < 2) {
             return List.of();
         }
 
         List<RuleHit> hits = new ArrayList<>();
-
         for (String error : RARE_ERRORS) {
-            // 筛选出包含该罕见错误的所有字段
-            List<Field> fieldsWithError = fields.stream()
+            // 筛选出包含该罕见错误的所有字段并按文档分组
+            Map<String, List<Field>> byDoc = fields.stream()
                     .filter(Objects::nonNull)
                     .filter(f -> scope.getDocumentIds().contains(f.getDocumentId()))
                     .filter(f -> f.getNormalizedValue() != null && f.getNormalizedValue().contains(error))
-                    .toList();
-
-            // 按文档 ID 分组，统计有多少个独立文档犯了同样的错误
-            Map<String, List<Field>> byDoc = fieldsWithError.stream()
                     .collect(Collectors.groupingBy(Field::getDocumentId));
 
             if (byDoc.size() >= 2) {
-                // 如果超过2个文档出现同一错误，进行两两组对命中
                 List<String> docs = new ArrayList<>(byDoc.keySet());
                 for (int i = 0; i < docs.size(); i++) {
                     for (int j = i + 1; j < docs.size(); j++) {
@@ -101,17 +81,8 @@ public class ErrorReplicationExecutor implements TenderRuleExecutor {
         return hits;
     }
 
-    /**
-     * 构建罕见错误命中的风险详情。
-     */
     private RuleHit buildHit(CompareScope scope, String error, Field left, Field right) {
-        RuleHit hit = new RuleHit();
-        hit.setHitId(UUID.randomUUID().toString());
-        hit.setRuleCode(RULE_CODE);
-        hit.setRuleName(RULE_NAME);
-        hit.setScopeId(scope.getScopeId());
-        hit.setRiskType(RISK_TYPE);
-        hit.setPriority(PRIORITY);
+        RuleHit hit = createBaseHit(RULE_CODE, RULE_NAME, scope.getScopeId(), RISK_TYPE, PRIORITY, VERSION);
         hit.setWeight(100);
         hit.setMatchedValue(error);
 
@@ -121,23 +92,9 @@ public class ErrorReplicationExecutor implements TenderRuleExecutor {
         hit.setDocumentIds(List.of(left.getDocumentId(), right.getDocumentId()));
         hit.setFieldIds(List.of(left.getFieldId(), right.getFieldId()));
         hit.setBlockIds(List.of(left.getBlockId(), right.getBlockId()).stream()
-                .filter(Objects::nonNull).distinct().toList());
-        hit.setEvidences(List.of(toEvidence(left), toEvidence(right)));
-        hit.setVersion(VERSION);
-        return hit;
-    }
+                .filter(Objects::nonNull).distinct().collect(Collectors.toList()));
 
-    /**
-     * 转换证据对象。
-     */
-    private RuleEvidence toEvidence(Field field) {
-        RuleEvidence evidence = new RuleEvidence();
-        evidence.setDocumentId(field.getDocumentId());
-        evidence.setFieldId(field.getFieldId());
-        evidence.setBlockId(field.getBlockId());
-        evidence.setMatchedValue(field.getNormalizedValue());
-        evidence.setChapterPath(field.getChapterPath());
-        evidence.setAnchor(field.getAnchor());
-        return evidence;
+        hit.setEvidences(List.of(toEvidence(left), toEvidence(right)));
+        return hit;
     }
 }
